# tnk

./: .gitignore  Cargo.toml  README.md  SECURITY.md  flake.nix
scripts/: smoke.sh
src/: catalog.rs  config.rs  doctor.rs  download.rs  engine.rs  init.rs  lifecycle.rs  main.rs  model.rs  services.rs  shutdown.rs  ui.rs
src/sandbox/: container.rs  container_utils.rs  lima.rs  mod.rs  shared.rs  types.rs
