[package]
name = "tnk"
version = "0.1.20"
edition = "2024"
rust-version = "1.95"
authors = ["tappunk"]
description = "Zero-trust sandbox for local inference and secure AI coding agent runtimes."
homepage = "https://tappunk.com"
repository = "https://github.com/tappunk/tnk"
documentation = "https://tappunk.com/tnk/"
license = "Apache-2.0"
readme = "README.md"
keywords = [
  "apple-silicon",
  "cli",
  "local-ai",
  "mlx",
  "sandbox",
]
categories = [
  "command-line-utilities",
  "virtualization",
  "artificial-intelligence",
  "development-tools",
  "security",
]

[dependencies]
clap = { version = "=4.6.1", features = ["derive", "env", "cargo"] }
clap_complete = "=4.6.5"
tokio = { version = "=1.52.3", features = ["full"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
toml = "=0.8.23"
reqwest = { version = "=0.12.28", features = ["json", "stream"] }
color-eyre = "=0.6.5"
libc = "=0.2.186"
dirs = "=6.0.0"
tempfile = "=3.24.0"
serde_yaml = "=0.9.34"
shell-words = "=1.1.0"
async-trait = "=0.1.88"
tokio-stream = { version = "=0.1.17", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
